Add component structure

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <head></head>
   <body>
-    <dm-lazyload source="http://placehold.it/80" text="A placeholder image"></dm-lazyload>
+    <dm-lazyload source="http://placehold.it/80" alt="A placeholder image"></dm-lazyload>
   </body>
 </html>
